--- a/index.html
+++ b/index.html
@@ -24,32 +24,32 @@
                 <div class="players">
 
                     <div class="player">
-                        <img src="/images/players/player-1.png" alt="">
+                        <img src="./images/players/player-1.png" alt="">
                         <h3 class="player-name">Top-Player-1</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-2.png" alt="">
+                        <img src="./images/players/player-2.png" alt="">
                         <h3 class="player-name">Top-Player-2</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-3.png" alt="">
+                        <img src="./images/players/player-3.png" alt="">
                         <h3 class="player-name">Top-Player-3</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-4.png" alt="">
+                        <img src="./images/players/player-4.png" alt="">
                         <h3 class="player-name">Top-Player-4</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-5.png" alt="">
+                        <img src="./images/players/player-5.png" alt="">
                         <h3 class="player-name">Top-Player-5</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-6.png" alt="">
+                        <img src="./images/players/player-6.png" alt="">
                         <h3 class="player-name">Top-Player-6</h3>
                     </div>
 
