--- a/index.html
+++ b/index.html
@@ -5,12 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Font Awesome  -->
+    <script src="https://kit.fontawesome.com/1d1ce7f3cd.js" crossorigin="anonymous"></script>
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 
 <body>
     <!-- Header Start  -->
+    <header>
+        <div class="header-section">
+            <div class="">
+                <div class="header-area">
+                    <div class="logo">
+                        <a href="#">
+                            <img src="/images/icons/logo.png" alt="">
+                        </a>
+                        <div class="logo-name">
+                            <a href="#">Idea</a>
+                        </div>
+                    </div>
+                    <div class="navbar">
+                        <ul>
+                            <li>
+                                <a href="#">Home</a>
+                            </li>
+                            <li>
+                                <a href="#">About</a>
+                            </li>
+                            <li>
+                                <a href="#">Works</a>
+                            </li>
+                            <li>
+                                <img src="/images/icons/profile.png" alt="">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     <!-- Header End  -->
 
 
@@ -24,7 +58,6 @@
                 <div class="players">
 
                     <div class="player">
-<<<<<<< HEAD
                         <img src="/images/players/player-1.png" alt="">
                         <h3 class="player-name">John Smith</h3>
                     </div>
@@ -52,35 +85,6 @@
                     <div class="player">
                         <img src="/images/players/player-6.png" alt="">
                         <h3 class="player-name">Maruf Ahmed</h3>
-=======
-                        <img src="./images/players/player-1.png" alt="">
-                        <h3 class="player-name">Top-Player-1</h3>
-                    </div>
-
-                    <div class="player">
-                        <img src="./images/players/player-2.png" alt="">
-                        <h3 class="player-name">Top-Player-2</h3>
-                    </div>
-
-                    <div class="player">
-                        <img src="./images/players/player-3.png" alt="">
-                        <h3 class="player-name">Top-Player-3</h3>
-                    </div>
-
-                    <div class="player">
-                        <img src="./images/players/player-4.png" alt="">
-                        <h3 class="player-name">Top-Player-4</h3>
-                    </div>
-
-                    <div class="player">
-                        <img src="./images/players/player-5.png" alt="">
-                        <h3 class="player-name">Top-Player-5</h3>
-                    </div>
-
-                    <div class="player">
-                        <img src="./images/players/player-6.png" alt="">
-                        <h3 class="player-name">Top-Player-6</h3>
->>>>>>> 18c644f52236252f1184809fbccd7ae89fee3a95
                     </div>
 
                 </div>
@@ -89,6 +93,7 @@
             <div class="top-blogs">
                 <h2 class="section-titel">Top Blogs</h2>
                 <div class="blogs">
+
                     <article class="blog">
                         <div class="thumbnail">
                             <img src="/images/blogs/blog-1.png" alt="">
@@ -98,12 +103,118 @@
                             <p class="blog-author">By <a href="#">Danny Sapio</a></p>
                         </div>
                     </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="/images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-titel">UI cheat sheet: list vs grids</h3>
+                            <p class="blog-author">By <a href="#">Tess Gadd</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="/images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-titel">7 typography tips interface design</h3>
+                            <p class="blog-author">By <a href="#">Jeremiah Lam</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="/images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-titel">Your logo is copied</h3>
+                            <p class="blog-author">By <a href="#">Ferdinand Vogler</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <!-- Lates Course Section  -->
+        <section class="container mar-top">
+            <h2 class="section-titel">Lates Course</h2>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-titei">React - The Complete <br> Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star eamty"></i>
+                            <span>4.5</span>
+                        </div>
+
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01:30 hr
+                        </div>
+                    </div>
+                </div>
+
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-titei">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star eamty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01:30 hr
+                        </div>
+                    </div>
+                </div>
+
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="/images/courses/course-1.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-titei">React - The Complete Guide 2020</h3>
+                        <p class="course-author">Reed Krakoff.</p>
+                    </div>
+                    <div class="course-info">
+                        <div>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star filed"></i>
+                            <i class="fa-solid fa-star eamty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="fa-regular fa-clock"></i>
+                            01:30 hr
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
     <!-- Main End  -->
-    <header></header>
+
 </body>
 
 </html>
