--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="header-area">
                     <div class="logo">
                         <a href="#">
-                            <img src="/images/icons/logo.png" alt="">
+                            <img src="./images/icons/logo.png" alt="">
                         </a>
                         <div class="logo-name">
                             <a href="#">Idea</a>
@@ -37,7 +37,7 @@
                                 <a href="#">Works</a>
                             </li>
                             <li>
-                                <img src="/images/icons/profile.png" alt="">
+                                <img src="./images/icons/profile.png" alt="">
                             </li>
                         </ul>
                     </div>
@@ -58,32 +58,32 @@
                 <div class="players">
 
                     <div class="player">
-                        <img src="/images/players/player-1.png" alt="">
+                        <img src="./images/players/player-1.png" alt="">
                         <h3 class="player-name">John Smith</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-2.png" alt="">
+                        <img src="./images/players/player-2.png" alt="">
                         <h3 class="player-name">Pro Rasel</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-3.png" alt="">
+                        <img src="./images/players/player-3.png" alt="">
                         <h3 class="player-name">Mujahid</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-4.png" alt="">
+                        <img src="./images/players/player-4.png" alt="">
                         <h3 class="player-name">Abu Sufian</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-5.png" alt="">
+                        <img src="./images/players/player-5.png" alt="">
                         <h3 class="player-name">Shajedul Karim</h3>
                     </div>
 
                     <div class="player">
-                        <img src="/images/players/player-6.png" alt="">
+                        <img src="./images/players/player-6.png" alt="">
                         <h3 class="player-name">Maruf Ahmed</h3>
                     </div>
 
@@ -96,7 +96,7 @@
 
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-1.png" alt="">
+                            <img src="./images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-titel"> 13 of My Favorite UI/UX Goodies</h3>
@@ -105,7 +105,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-2.png" alt="">
+                            <img src="./images/blogs/blog-2.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-titel">UI cheat sheet: list vs grids</h3>
@@ -114,7 +114,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-3.png" alt="">
+                            <img src="./images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-titel">7 typography tips interface design</h3>
@@ -123,7 +123,7 @@
                     </article>
                     <article class="blog">
                         <div class="thumbnail">
-                            <img src="/images/blogs/blog-4.png" alt="">
+                            <img src="./images/blogs/blog-4.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-titel">Your logo is copied</h3>
@@ -140,7 +140,7 @@
             <div class="courses">
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-1.png" alt="">
+                        <img src="./images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-titei">React - The Complete <br> Guide 2020</h3>
@@ -165,7 +165,7 @@
 
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-1.png" alt="">
+                        <img src="./images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-titei">React - The Complete Guide 2020</h3>
@@ -189,7 +189,7 @@
 
                 <div class="course">
                     <div class="course-banner">
-                        <img src="/images/courses/course-1.png" alt="">
+                        <img src="./images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
                         <h3 class="course-titei">React - The Complete Guide 2020</h3>
