--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Font Awesome  -->
     <script src="https://kit.fontawesome.com/1d1ce7f3cd.js" crossorigin="anonymous"></script>
     <!-- StyleSheet -->
-    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 
 <body>
