--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leader Board</title>
     <!-- Font Awesome  -->
     <script src="https://kit.fontawesome.com/1d1ce7f3cd.js" crossorigin="anonymous"></script>
     <!-- StyleSheet -->
