--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
     <!-- Font Awesome  -->
     <script src="https://kit.fontawesome.com/1d1ce7f3cd.js" crossorigin="anonymous"></script>
-    <!-- StyleSheet -->
+    <!-- Media CSS -->
+    <link rel="stylesheet" href="/media querie/media.css">
+    <!-- StyleSheet CSS -->
     <link rel="stylesheet" href="/style/style.css">
 </head>
 
