--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>Leader Board</title>
     <!-- Font Awesome  -->
     <script src="https://kit.fontawesome.com/1d1ce7f3cd.js" crossorigin="anonymous"></script>
-<<<<<<< HEAD
+<HEAD>
     <!-- Media CSS -->
     <link rel="stylesheet" href="/media querie/media.css">
     <!-- StyleSheet CSS -->
     <link rel="stylesheet" href="/style/style.css">
-=======
     <!-- StyleSheet -->
     <link rel="stylesheet" href="./style/style.css">
 </head>
